force-app/main/default/objects/Exercise_Item__c/Exercise_Item__c.object-meta.xml
<CustomObject>
    <label>Exercise Item</label>
    <nameField>
        <displayFormat>EI-{0000}</displayFormat>
        <label>Exercise Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exercise Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>