force-app/main/default/objects/Exercise_Item__c/fields/Calo_burned__c.field-meta.xml
<CustomField>
    <fullName>Calo_burned__c</fullName>
    <formula>Exercise__r.Calo_per_hour__c *  Time__c / 3600</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total calories burned doing this exercise</inlineHelpText>
    <label>Calo burned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>