force-app/main/default/objects/Exercise_Item__c/fields/Calories_burned__c.field-meta.xml
<CustomField>
    <fullName>Calories_burned__c</fullName>
    <label>Calories burned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>