force-app/main/default/objects/Exercise_Item__c/fields/Exercise__c.field-meta.xml
<CustomField>
    <fullName>Exercise__c</fullName>
    <label>Exercise</label>
    <referenceTo>Exercise__c</referenceTo>
    <relationshipLabel>Exercise Items</relationshipLabel>
    <relationshipName>Exercise_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>