force-app/main/default/objects/Exercise_Item__c/fields/Exercise_Image__c.field-meta.xml
<CustomField>
    <fullName>Exercise_Image__c</fullName>
    <formula>Exercise__r.Image__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exercise Image</label>
    <type>Text</type>
</CustomField>