force-app/main/default/objects/Exercise_Item__c/fields/Exercise_Name__c.field-meta.xml
<CustomField>
    <fullName>Exercise_Name__c</fullName>
    <formula>Exercise__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exercise Name</label>
    <type>Text</type>
</CustomField>