force-app/main/default/objects/Exercise_Item__c/fields/Exercise_Video__c.field-meta.xml
<CustomField>
    <fullName>Exercise_Video__c</fullName>
    <formula>Exercise__r.Video__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exercise Video</label>
    <type>Text</type>
</CustomField>