force-app/main/default/objects/Exercise_Item__c/fields/Rest__c.field-meta.xml
<CustomField>
    <fullName>Rest__c</fullName>
    <inlineHelpText>Rest in number</inlineHelpText>
    <label>Rest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>