force-app/main/default/objects/Exercise_Item__c/fields/Workout__c.field-meta.xml
<CustomField>
    <fullName>Workout__c</fullName>
    <label>Workout</label>
    <referenceTo>Workout__c</referenceTo>
    <relationshipLabel>Exercise Items</relationshipLabel>
    <relationshipName>Exercise_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>